--- a/backend/app/assets/stylesheets/sidebar.css
+++ b/backend/app/assets/stylesheets/sidebar.css
@@ -53,10 +53,9 @@
 
 .mobile_menu {
 	background-color: #222;
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.8);
 	height: 0;
 	margin: 0;
-	overflow-y: hidden;
+	overflow: hidden;
 	padding: 0;
 	position: absolute; top: 60px; left: 0;
 	width: 100%;
@@ -74,6 +73,10 @@
 .mobile_menu_dropdown {
 	z-index: 1030;
 	height: auto;
+	width: 0%;
+	overflow-x: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 	transform: translate3d(100%, 0, 0);
 }
 
